--- a/style.css
+++ b/style.css
@@ -4,7 +4,8 @@
     text-decoration: none;
     list-style: none;
     box-sizing: border-box;
-    background-color: black;
+    background-color: #111111;
+    
 }
 body{
     font-family: montserrat;
@@ -23,6 +24,10 @@ label.logo{
 nav ul{
     float: right;
     margin-right: 20px;
+    background: transparent;
+    padding-top: 10px;
+    border: 3px solid rgb(27, 27, 27);
+    border-radius: 40px;
 }
 nav ul li{
     display:inline-block;
@@ -38,7 +43,6 @@ nav ul li a{
 }
 a.active,a:hover{
 background: tomato;
-transition: .5s;
 }
 nav #icon{
     color: white;
@@ -48,6 +52,65 @@ nav #icon{
     margin-right: 40px;
     cursor: pointer;
     display: none;
+}
+.hero{
+    height: 100%;
+    width: 100%;
+    min-height: 100vh;
+    position: relative;
+    display: grid;
+    grid-template-columns: repeat(2,1fr);
+    align-items: center;
+    gap: 2rem;
+}
+section{
+    padding: 0 19%;
+}
+p{
+    font-size: 40px;
+    font-weight: 300;
+    color: white;
+    margin-bottom: 40px;
+}
+p.new{
+    color: gray;
+    font-size: 15px;
+    line-height: 1.9;
+    margin-bottom: 40px;
+}
+span{
+  font-family: "Playwrite CZ", cursive;
+}
+.hero-img img{
+    width: 400px;
+    height: auto;
+}
+.hero-img {
+    position: relative;
+}
+.hero-text a{
+    display: inline;
+    color: white;
+    background: tomato;
+    border: 1px solid transparent;
+    border-radius: 50px;
+    padding: 12px 30px;
+    line-height: 1.4;
+    font-size: 14px;
+    font-weight: 500;
+    text-transform: uppercase;
+    transition: all .55s ease;
+}
+
+.hero-text a:hover{
+    background: transparent;
+    border: 1px solid white;
+    transform: translateX(8px);
+}
+.hero-text a.ctaa{
+    background: transparent;
+    border: 1px solid white;
+    margin-left: 10px;
 }
 @media (max-width: 909px){
     nav #icon{
