--- a/style.css
+++ b/style.css
@@ -3,11 +3,17 @@
     margin: 0;
     text-decoration: none;
     list-style: none;
-    box-sizing: border-box;   
-    background: rgb(15, 15, 15);
+    box-sizing: border-box;  
+}
+:root {
+    --primary-color :#111317;
+    --primary-color-light: #1f2125;
+    --primary-color-extra-light: #35373b;
+    --max-width:1200px;
 }
 body{
     font-family: montserrat;
+    background-color: var(--primary-color);
 }
 nav{
     height: 80px;
@@ -61,9 +67,6 @@ nav #icon{
     grid-template-columns: repeat(2,1fr);
     align-items: center;
     gap: 2rem;
-    background: rgb(15, 15, 15);
-}
-section{
     padding: 0 19%;
 }
 p{
@@ -179,10 +182,11 @@ span{
 } 
 .wrapper{
     width: 85%;
-    margin: 50px auto;
+    margin: 80px auto;
     display: flex;
     justify-content: space-between;
     align-items: center;
+    background-color: rgb(34, 33, 33);
 }
 .contest{
     width: 50%;
@@ -311,11 +315,14 @@ form .btn{
 .bmii{
     display: flex;
     justify-content: space-between;
+    background-color: rgb(34, 33, 33);
 }
 .other-container{
     padding: 15px 9%;
     padding-bottom: 50px;
     padding-top: 50px;
+    background-color: rgb(34, 33, 33);
+    border-radius: 10px;
     
 }
 .box-container{
@@ -343,11 +350,104 @@ form .btn{
     font-size: 15px;
     line-height: 1.8;
 }
+#testimonials{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    width: 100%;
+}
+.testimonial-heading{
+    letter-spacing: 1px;
+    margin: 30px 0px;
+    padding: 10px 20px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+.testimonial-heading h1{
+    font-size: 2.2rem;
+    font-weight: 500;
+    background-color: gray;
+    padding: 10px 20px;
+    border-radius: 15px;
+}
+.testimonial-heading span{
+    font-size: 1.3rem;
+    color: #fff;
+    margin-bottom: 10px;
+    letter-spacing: 2px;
+    text-transform: uppercase;
+}
+.testimonial-box-container{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 150%;
+    flex-wrap:wrap;
+}
+.testimonial-box{
+    width: 500px;
+    box-shadow: 2px 2px 30px rgba(0, 0, 0, 0.1);
+    background-color: #fff;
+    padding: 20px;
+    margin: 15px;
+    cursor: pointer;
+}
+.testimonial-box:hover{
+    transform: translateY(-10px);
+    transition: all ease 0.3s;
+}
+.profile-img{
+    width: 50px;
+    height: 50px;
+    border-radius: 50%;
+    overflow: hidden;
+    margin-right: 10px;
+}
+.profile-img img{
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    object-position: center;
+}
+.profile{
+    display: flex;
+    align-items: center;
+}
+.name-user{
+    display: flex;
+    flex-direction: column;
+}
+.name-user strong{
+    color: #3d3d3d;
+    font-size: 1.1rem;
+    letter-spacing: 0.5px;
+}
+.name-user span{
+    color: #979797;
+    font-size: 0.8rem;
+}
+.reviews{
+    color: tomato;
+}
+.box-top{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin-bottom: 20px;
+}
+.client-comment p{
+    font-size: 0.9rem;
+    color: #4b4b4b;
+}
 footer{
     position: relative;
     width: 100%;
     height: auto;
     padding: 50px 100px;
+    background-color: rgb(34, 33, 33);
 }
 footer .foter{
     width: 100%;
@@ -411,7 +511,7 @@ width: 100%;
 height: auto;
 }
 section{
-    padding: 0 3%;
+    padding: 0.3%;
     transition: .2s;
 }
 .hero-text{
@@ -449,5 +549,11 @@ footer .foter{
     grid-template-columns: repeat(1,1fr);
     grid-gap: 20px;
 
+}
+.testimonial-box{
+    width: 100%;
+}
+.testimonial-heading h1{
+    font-size: 1.4rem;
 }
 }
