--- a/style.css
+++ b/style.css
@@ -67,7 +67,7 @@ nav #icon{
     grid-template-columns: repeat(2,1fr);
     align-items: center;
     gap: 2rem;
-    padding: 0 19%;
+    padding: 0 5%;
 }
 p{
     font-size: 40px;
@@ -114,6 +114,42 @@ span{
     background: transparent;
     border: 1px solid white;
     margin-left: 10px;
+}
+.card-1{
+    padding: 10px 21px 20px 21px;
+    text-align: left;
+    box-sizing: border-box;
+    border: 1px solid rgba(255, 255, 255, 0.1);
+    border-radius: 10px;
+    backdrop-filter: blur(25px);
+    background: rgba(255, 255, 255, 0.1);
+    margin-left: 70%;
+    width: 250px;
+    height: 120px;
+    position: absolute;
+    bottom: 50%;
+    color: white;
+   margin-left: 60%;
+   margin-top: 20%;
+    
+}
+.card-2{
+    padding: 10px 21px 20px 21px;
+    text-align: left;
+    box-sizing: border-box;
+    border: 1px solid rgba(255, 255, 255, 0.1);
+    border-radius: 10px;
+    backdrop-filter: blur(25px);
+    background: rgba(255, 255, 255, 0.1);
+    margin-left: 70%;
+    width: 250px;
+    height: 120px;
+    position: relative;
+    bottom: 50%;
+    color: white;
+   margin-right: 50%;
+  
+    
 }
 .habit-section{
     width: 100%;
@@ -333,8 +369,12 @@ form .btn{
 .box{
     box-shadow: 0 5px 10px rgba(43, 42, 42, 0.2);
     border-radius: 5px;
-    text-align: center;
-    padding: 30px 20px;
+    text-align: center; 
+    padding: 30px 20px; 
+    position: relative;
+}
+.description{
+    position: absolute;
 }
 .box img{
     height: 80%;
